<resources>
    <string name="app_name">Dibujando un mañana</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="icon_desc">"Ask org if we can add a totally white logo"</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="inicia_sesi_n">Inicia sesión</string>
    <string name="o">- o -</string>
    <string name="ingresa_con">Ingresa con Google</string>
    <string name="fb_desc">fb login logo</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="reg_strate"><u>¡Regístrate!</u></string>
    <string name="iniciar_sesi_n">¡Inicia sesión!</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="reg_strate_con">Regístrate con:</string>
    <string name="apellido_materno">Apellido materno</string>
    <string name="apellido_paterno">Apellido paterno</string>
    <string name="nombre_s">Nombre(s)</string>
    <string name="fecha_nac">Fecha nac.</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="informaci_n_general">Sobre ti</string>
    <string name="eres_inversionista_social">¿Eres inversionista social?</string>
    <string name="no">No</string>
    <string name="yes">Sí</string>
    <string name="represento_a_una_organizaci_n">Represento a una organización</string>
    <string name="soy_un_inversionista_social">Soy un inversionista social</string>
    <string name="con_qu_opci_n_te_identificas_mejor">¿Con qué opción te identificas mejor?</string>
    <string name="busco_contactar_con_inversionistas_y_o_organizaciones">Busco contactar con inversionistas y/o organizaciones</string>
    <string name="sobre_tu_forma_de_pago">Sobre tu forma de pago</string>
    <string name="n_mero_de_tarjeta">Número de tarjeta</string>
    <string name="nombre_s_del_tarjetahabiente">Nombre(s) del propietario</string>
    <string name="cvv">CVV</string>
    <string name="tu_contrase_a">Tu contraseña</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="confirma_tu_contrase_a">Confirma tu contraseña</string>
    <string name="finalizar">Finalizar</string>
    <string name="tu_membres_a">Tu membresía</string>
    <string name="b_sica_0_00">Básica - <b> $0.00 / mes </b></string>
    <string name="premium_0_01">Premium - <b>$0.01 / mes</b></string>
    <string name="vip_0_02_mes">VIP - <b>$0.02 / mes</b></string>
    <string name="sobre_la_organizaci_n">Sobre la organización</string>
    <string name="nombre_de_la_organizaci_n">Nombre de la organización</string>
    <string name="pa_s_de_origen">País de origen</string>
    <string name="a_o_de_creaci_n">Año de creación</string>
    <string name="nueva_iniciativa">Nueva iniciativa</string>
    <string name="mis_iniciativas">Mis iniciativas</string>
    <string name="revisar_membresia">Mi membresía</string>
    <string name="mi_metodo_de_pago">Mi método de pago</string>
    <string name="donar">Hacer donación</string>
    <string name="enter_project">Entrar a un proyecto</string>
    <string name="mis_proyectos">Mis proyectos</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="ver_organizaciones">Ver organizaciones</string>
    <string name="ver_inversionistas">Ver inversionistas</string>
    <string name="pantalla_principal">Pantalla principal</string>
    <string name="hacer_una_donaci_n">Hacer una donación</string>
    <string name="donation_symbol">donation symbol</string>
    <string name="selecciona_un_m_todo_de_pago">Selecciona un método de pago:</string>
    <string name="fecha_de_expiraci_n">Fecha de exp.</string>
    <string name="contrase_a">Contraseña</string>
    <string name="informaci_n_de_la_tarjeta">Información de la tarjeta</string>
    <string name="cantidad_a_pagar">Cantidad a pagar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="siguiente">Siguiente</string>
    <string name="title_activity_sign_in_authentication">SignInAuthentication</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="todo">TODO</string>
    <string name="recupera_tu_contrase_a">Recupera tu contraseña</string>
    <string name="listo">¡Listo!</string>
    <string name="te_hemos_enviado_un_correo_con_las_instrucciones_para_recuperar_tu_contrase_a">Te hemos enviado un correo con las instrucciones para recuperar tu contraseña.</string>
    <string name="s_lo_necesitamos_que_nos_ayudes_llenando_la_siguiente_informaci_n">Sólo necesitamos que nos ayudes llenando la siguiente información</string>
    <string name="a_continuaci_n_introduce_tu_nueva_contrase_a">A continuación introduce tu nueva contraseña:</string>
    <string name="recuperemos_tu_contrase_a">Recuperemos tu contraseña</string>
    <string name="nextttt">next</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="title_activity_donate">DonateActivity</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="organizaciones">Organizaciones</string>
    <string name="eventos">Eventos</string>
    <string name="proyectos">Proyectos</string>
    <string name="perfil">Perfil</string>
    <string name="organizaciones_participantes">Organizaciones participantes</string>
    <string name="eventos_disponibles">Eventos disponibles</string>
    <string name="proyectos_actuales">Proyectos actuales</string>
    <string name="monto_a_donar">Monto a donar</string>
    <string name="donarbtn">Donar</string>
    <string name="pregunta_de_seguridad">Pregunta de seguridad</string>
    <string name="respuesta">Respuesta</string>
    <string name="pa_s">País de origen</string>
    <string name="rfc">RFC</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="fecha_de_creaci_n">Fecha de creación (aaaa-mm-dd)</string>
    <string name="cu_ntanos_brevemente_sobre_ti">¡Cuéntanos brevemente sobre ti!</string>
</resources>