<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/firstlaunch_gradient">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="156dp"
        android:layout_height="171dp"
        android:contentDescription="@string/icon_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/signUpBankInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/con_qu_opci_n_te_identificas_mejor"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/accTypesRGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RadioGroup
        android:id="@+id/accTypesRGroup"
        android:layout_width="310dp"
        android:layout_height="169dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/btnDefaultOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#50FFFFFF"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/soy_un_inversionista_social"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:buttonTint="#50FFFFFF"
            android:minHeight="48dp"
            android:text="@string/represento_a_una_organizaci_n"
            android:textColor="#FFF8E1"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:buttonTint="#50FFFFFF"
            android:minHeight="48dp"
            android:text="@string/busco_contactar_con_inversionistas_y_o_organizaciones"
            android:textColor="#FFF8E1"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnNext"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="250dp"
        android:elevation="2dp"
        android:shadowColor="@color/black"
        app:cardBackgroundColor="#c21353"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accTypesRGroup"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/siguiente"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ya_tienes_cuenta"
        android:textColor="#F3E5F5"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/btnNext"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="@+id/btnNext"
        app:layout_constraintTop_toBottomOf="@+id/btnNext"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/btnLoginFromSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/iniciar_sesi_n"
        android:textColor="#5F8EF4"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnNext"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="@+id/btnNext"
        app:layout_constraintTop_toBottomOf="@+id/btnNext"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>