<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/firstlaunch_gradient">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="156dp"
        android:layout_height="171dp"
        android:contentDescription="@string/icon_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="357dp"
        android:layout_height="277dp"
        android:padding="@dimen/element_large_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/etNames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:autofillHints="testHint"
                android:background="@drawable/inputshape"
                android:backgroundTint="#20FFFFFF"
                android:drawableStart="@drawable/ic_person"
                android:ems="15"
                android:hint="@string/nombre_s"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="#70FFFFFF"
                tools:ignore="TextContrastCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/etLastName_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:autofillHints="testHint"
                android:background="@drawable/inputshape"
                android:backgroundTint="#20FFFFFF"
                android:drawableStart="@drawable/ic_person"
                android:ems="15"
                android:hint="@string/apellido_paterno"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="#70FFFFFF"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/etLastName_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:autofillHints="testHint"
                android:background="@drawable/inputshape"
                android:backgroundTint="#20FFFFFF"
                android:drawableStart="@drawable/ic_person"
                android:ems="15"
                android:hint="@string/apellido_materno"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="#70FFFFFF"
                tools:ignore="TextContrastCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:autofillHints="testHint"
                android:background="@drawable/inputshape"
                android:backgroundTint="#20FFFFFF"
                android:drawableStart="@drawable/ic_username"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="#70FFFFFF"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/etBirthdate"
                android:layout_width="182dp"
                android:layout_height="48dp"
                android:layout_weight="0.7"
                android:autofillHints="testHint"
                android:background="@drawable/inputshape"
                android:backgroundTint="#20FFFFFF"
                android:drawableStart="@drawable/ic_date"
                android:hint="@string/fecha_nac"
                android:inputType="date"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="#70FFFFFF"
                tools:ignore="TextContrastCheck" />

        </TableRow>

    </TableLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnNext"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="250dp"
        android:clickable="true"
        android:elevation="2dp"
        android:focusable="true"
        android:shadowColor="@color/black"
        app:cardBackgroundColor="#c21353"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.52">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/siguiente"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/signUpBankInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/informaci_n_general"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/orTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/o"
        android:textColor="#d6d0d2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNext"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/reg_strate_con"
        android:textColor="#d6d0d2"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orTextView"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:dividerPadding="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:showDividers="beginning"
        android:soundEffectsEnabled="false"
        android:splitMotionEvents="false"
        app:barrierMargin="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fb_desc"
                app:srcCompat="@drawable/licon_fb" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnGoogleSignIn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fb_desc"
                android:scaleX="0.6"
                android:scaleY="0.6"
                app:srcCompat="@drawable/licon_ggl" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>